--- a/prism-app/Views/ProfileStatisticUserControl.xaml
+++ b/prism-app/Views/ProfileStatisticUserControl.xaml
@@ -7,6 +7,7 @@
 			 xmlns:prism="using:Microsoft.Practices.Prism.StoreApps"
              xmlns:i="using:Microsoft.Xaml.Interactivity"
              xmlns:core="using:Microsoft.Xaml.Interactions.Core"
+             xmlns:vm="using:Socialalert.ViewModels"
              mc:Ignorable="d"
              d:DataContext="{Binding Source={d:DesignData Source=/Data/ProfileStatisticUserControl.json, Type=vm:ProfileStatisticViewModel}}"
 			 d:DesignHeight="500"
