--- a/prism-app/App.xaml
+++ b/prism-app/App.xaml
@@ -2,7 +2,7 @@
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:conv="using:Socialalert.Converters"
-                   xmlns:prism="using:Microsoft.Practices.Prism.Mvvm">
+                   xmlns:prism="using:Microsoft.Practices.Prism.StoreApps">
 	<prism:MvvmAppBase.Resources>
         <!-- Application-specific resources -->
         <x:String x:Key="AppName">Social Alert</x:String>
