--- a/prism-app/Views/PictureCommentUserControl.xaml
+++ b/prism-app/Views/PictureCommentUserControl.xaml
@@ -7,7 +7,7 @@
              xmlns:a="using:Socialalert.Actions"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:prism="using:Microsoft.Practices.Prism.Mvvm"
+			 xmlns:prism="using:Microsoft.Practices.Prism.StoreApps"
              xmlns:i="using:Microsoft.Xaml.Interactivity"
              xmlns:core="using:Microsoft.Xaml.Interactions.Core"
              mc:Ignorable="d"
@@ -15,21 +15,13 @@
 			 d:DesignHeight="600"
 			 d:DesignWidth="500">
 
-    <UserControl.Resources>
-        <CollectionViewSource
-            x:Name="itemsViewSource"
-            Source="{Binding Comments}"/>
-    </UserControl.Resources>
-
     <!-- Page content -->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <StackPanel Name="toolbar" Grid.Row="0" Grid.ColumnSpan="2" Orientation="Horizontal">
+        <StackPanel Name="toolbar" Grid.Row="0" Orientation="Horizontal">
             <AppBarToggleButton Label="Like" IsChecked="{Binding IsLikeChecked, Mode=TwoWay}" Command="{Binding LikeCommand}">
                 <AppBarToggleButton.Icon>
                     <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xF087;"/>
@@ -40,40 +32,40 @@
                     <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xF088;"/>
                 </AppBarToggleButton.Icon>
             </AppBarToggleButton>
-            <AppBarButton Label="New comment" Visibility="{Binding NewComment, Converter={StaticResource ObjectToCollapsedConverter}}" Command="{Binding NewCommentCommand}">
+            <AppBarButton Label="New comment" Visibility="{Binding NewComment, Converter={StaticResource ObjectToCollapsedConverter}}" Command="{Binding CommentList.NewCommentCommand}">
                 <AppBarButton.Icon>
                     <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf0e5;"/>
                 </AppBarButton.Icon>
             </AppBarButton>
-            <AppBarButton Label="Post comment" Visibility="{Binding NewComment, Converter={StaticResource ObjectToVisibilityConverter}}" Command="{Binding PostCommentCommand}">
+            <AppBarButton Label="Post comment" Visibility="{Binding NewComment, Converter={StaticResource ObjectToVisibilityConverter}}" Command="{Binding CommentList.PostCommentCommand}">
                 <AppBarButton.Icon>
                     <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf064;"/>
                 </AppBarButton.Icon>
             </AppBarButton>
-            <AppBarButton Label="Repost" Command="{Binding ConfirmRepost.ShowCommand}">
+            <AppBarButton Label="Repost" Command="{Binding ConfirmPictureRepost.ShowCommand}">
                 <AppBarButton.Icon>
                     <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf09e;"/>
                 </AppBarButton.Icon>
                 <AppBarButton.Flyout>
                     <Flyout>
-                        <local:ConfirmActionUserControl DataContext="{Binding ConfirmRepost}"/>
+                        <local:ConfirmActionUserControl DataContext="{Binding ConfirmPictureRepost}"/>
                         <i:Interaction.Behaviors>
-                            <core:DataTriggerBehavior Binding="{Binding ConfirmRepost.IsFlyoutClosed}" ComparisonCondition="Equal" Value="True">
+                            <core:DataTriggerBehavior Binding="{Binding ConfirmPictureRepost.IsFlyoutClosed}" ComparisonCondition="Equal" Value="True">
                                 <a:CloseFlyoutAction />
                             </core:DataTriggerBehavior>
                         </i:Interaction.Behaviors>
                     </Flyout>
                 </AppBarButton.Flyout>
             </AppBarButton>
-            <AppBarButton Label="Report" Command="{Binding ReportContent.ShowCommand}" >
+            <AppBarButton Label="Report" Command="{Binding ReportPictureContent.ShowCommand}" >
                 <AppBarButton.Icon>
                     <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf188;"/>
                 </AppBarButton.Icon>
                 <AppBarButton.Flyout>
                     <Flyout>
-                        <local:ReportContentUserControl DataContext="{Binding ReportContent}"/>
+                        <local:ReportContentUserControl DataContext="{Binding ReportPictureContent}"/>
                         <i:Interaction.Behaviors>
-                            <core:DataTriggerBehavior Binding="{Binding ReportContent.IsFlyoutClosed}" ComparisonCondition="Equal" Value="True">
+                            <core:DataTriggerBehavior Binding="{Binding ReportPictureContent.IsFlyoutClosed}" ComparisonCondition="Equal" Value="True">
                                 <a:CloseFlyoutAction />
                             </core:DataTriggerBehavior>
                         </i:Interaction.Behaviors>
@@ -81,105 +73,6 @@
                 </AppBarButton.Flyout>
             </AppBarButton>
         </StackPanel>
-        <TextBlock Grid.Row="1" Grid.ColumnSpan="2" x:Uid="CommentsTitle" Text="COMMENTS" Style="{ThemeResource SubheaderTextBlockStyle}" Margin="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Grid Grid.Row="2" Name="NewComment" Height="110" Margin="10" Visibility="{Binding NewComment, Converter={StaticResource ObjectToVisibilityConverter}}">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="200"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Border Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
-                <Image Source="{Binding NewComment.ProfilePictureUrl}" Stretch="UniformToFill" AutomationProperties.Name="{Binding NewComment.Creator}" HorizontalAlignment="Left"/>
-            </Border>
-            <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="Auto"/>
-                    </Grid.ColumnDefinitions>
-                    <local:ProfileStatusUserControl Grid.Column="0" DataContext="{Binding NewComment}"/>
-                    <Button x:Uid="Cancel" Grid.Column="1" BorderThickness="0" Padding="0" Command="{Binding CancelCommentCommand}" Visibility="{Binding NewComment, Converter={StaticResource ObjectToVisibilityConverter}}" >
-                        <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf014;" VerticalAlignment="Center" />
-                    </Button>
-                    <Button x:Uid="Post" Grid.Column="2" BorderThickness="0" Padding="0" Command="{Binding PostCommentCommand}" Visibility="{Binding NewComment, Converter={StaticResource ObjectToVisibilityConverter}}" Margin="10,0,0,0" >
-                        <FontIcon FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf064;" VerticalAlignment="Center" />
-                    </Button>
-                </Grid>
-                <TextBox Text="{Binding NewComment.Comment, Mode=TwoWay}" Height="80" MaxHeight="80" AcceptsReturn="True" PlaceholderText="Enter your comment here"/>
-            </StackPanel>
-        </Grid>
-        <ScrollViewer Grid.Row="3" >
-            <GridView
-                    x:Name="itemGridView"
-                    AutomationProperties.AutomationId="ItemGridView"
-                    AutomationProperties.Name="Picture comments"
-                    TabIndex="1"
-                    Grid.Row="1"
-                    Grid.Column="1"
-                    ItemsSource="{Binding Source={StaticResource itemsViewSource}}"
-                    SelectionMode="None"
-                    IsTapEnabled="False"
-                    IsSwipeEnabled="False" IsRightTapEnabled="False" IsHoldingEnabled="False" IsDoubleTapEnabled="False">
-
-                <GridView.ItemTemplate>
-                    <DataTemplate>
-                        <Grid Height="110" Margin="10" Width="400">
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="200"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="25"/>
-                            </Grid.RowDefinitions>
-                            <Border Grid.RowSpan="2" Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}">
-                                <Image Source="{Binding ProfilePictureUrl}" Stretch="UniformToFill" AutomationProperties.Name="{Binding Creator}" HorizontalAlignment="Left"/>
-                            </Border>
-                            <StackPanel Grid.Column="1" VerticalAlignment="Top" Margin="10,0,0,0" >
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="Auto"/>
-										<ColumnDefinition Width="Auto"/>
-                                    </Grid.ColumnDefinitions>
-                                    <local:ProfileStatusUserControl/>
-                                    <Button Grid.Column="1" BorderThickness="0" Padding="0" Command="{Binding ReportContentViewModel.ReportCommand}">
-                                        <FontIcon x:Uid="Report" FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf188;" Margin="0,0,10,0" VerticalAlignment="Center" />
-										<Button.Flyout>
-											<Flyout>
-                                                <local:ReportContentUserControl DataContext="{Binding ReportContentViewModel}"/>
-                                                <i:Interaction.Behaviors>
-                                                    <core:DataTriggerBehavior Binding="{Binding ReportContentViewModel.IsFlyoutClosed}" ComparisonCondition="Equal" Value="True">
-                                                        <a:CloseFlyoutAction />
-                                                    </core:DataTriggerBehavior>
-                                                </i:Interaction.Behaviors>
-                                            </Flyout>
-										</Button.Flyout>
-                                    </Button>
-                                    <Button Grid.Column="2" BorderThickness="0" Padding="0" Command="{Binding RepostConfirmationViewModel.ShowCommand}">
-                                        <FontIcon x:Uid="Repost" FontFamily="{StaticResource AwesomeIcons}" Glyph="&#xf09e;" Margin="0,0,10,0" VerticalAlignment="Center" />
-                                        <Button.Flyout>
-                                            <Flyout>
-                                                <local:ConfirmActionUserControl DataContext="{Binding RepostConfirmationViewModel}"/>
-                                                <i:Interaction.Behaviors>
-                                                    <core:DataTriggerBehavior Binding="{Binding ConfirmRepost.IsFlyoutClosed}" ComparisonCondition="Equal" Value="True">
-                                                        <a:CloseFlyoutAction />
-                                                    </core:DataTriggerBehavior>
-                                                </i:Interaction.Behaviors>
-                                            </Flyout>
-                                        </Button.Flyout>
-                                    </Button>
-                                </Grid>
-                                <TextBlock Text="{Binding Comment}" Style="{StaticResource BodyTextBlockStyle}" MaxHeight="60"/>
-                            </StackPanel>
-                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{Binding Creation}" Style="{StaticResource CaptionTextBlockStyle}" TextWrapping="NoWrap" HorizontalAlignment="Right" />
-                        </Grid>
-                    </DataTemplate>
-                </GridView.ItemTemplate>
-            </GridView>
-
-        </ScrollViewer>
-        <ProgressRing Grid.Row="3" IsActive="{Binding LoadingData}" Height="100" Width="100" />
-        
+        <local:CommentListUserControl Grid.Row="1" DataContext="{Binding CommentList}"/>
     </Grid>
 </UserControl>
