--- a/prism-app/Views/PicturePreviewUserControl.xaml
+++ b/prism-app/Views/PicturePreviewUserControl.xaml
@@ -6,8 +6,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 			 xmlns:prism="using:Microsoft.Practices.Prism.StoreApps"
-             xmlns:mvvm="using:Microsoft.Practices.Prism.Mvvm"
-             mvvm:ViewModelLocator.AutoWireViewModel="True"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d"
 			 d:DesignHeight="130"
 			 d:DesignWidth="420"
