--- a/prism-app/Views/TopAppBarUserControl.xaml
+++ b/prism-app/Views/TopAppBarUserControl.xaml
@@ -8,8 +8,7 @@
 			 xmlns:prism="using:Microsoft.Practices.Prism.StoreApps"
              xmlns:i="using:Microsoft.Xaml.Interactivity"
              xmlns:core="using:Microsoft.Xaml.Interactions.Core"
-             xmlns:mvvm="using:Microsoft.Practices.Prism.Mvvm"
-             mvvm:ViewModelLocator.AutoWireViewModel="True"
+             prism:ViewModelLocator.AutoWireViewModel="True"
              mc:Ignorable="d"
 			 d:DesignHeight="100"
 			 d:DesignWidth="800">
