--- a/prism-app/App.xaml
+++ b/prism-app/App.xaml
@@ -24,6 +24,7 @@
         <conv:ObjectToVisibilityConverter x:Name="ObjectToVisibilityConverter"/>
         <conv:ObjectToCollapsedConverter x:Name="ObjectToCollapsedConverter"/>
         <conv:CommandToVisibilityConverter x:Name="CommandToVisibilityConverter"/>
+        <conv:InverseBooleanConverter x:Name="InverseBooleanConverter"/>
         <x:String x:Key="ChevronGlyph">&#xE26B;</x:String>
         <x:String x:Key="OnlineGlyph">&#xf007;</x:String>
         <x:String x:Key="OfflineGlyph">&#xf056;</x:String>
