--- a/prism-app/Views/UploadImagePage.xaml
+++ b/prism-app/Views/UploadImagePage.xaml
@@ -13,7 +13,7 @@
     prism:ViewModelLocator.AutoWireViewModel="True">
 
     <prism:VisualStateAwarePage.Resources>
-        
+
     </prism:VisualStateAwarePage.Resources>
 
     <prism:VisualStateAwarePage.TopAppBar>
@@ -63,16 +63,40 @@
         </Grid>
         <Grid Grid.Row="1" Margin="10">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
+                <RowDefinition MinHeight="200" Height="200*"/>
                 <RowDefinition Height="140"/>
             </Grid.RowDefinitions>
-
-            <Button Grid.Row="0" Command="{Binding UploadPictureCommand}" Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}" Width="640" Height="480" HorizontalAlignment="Left" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition MinWidth="100"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Row="0" Grid.Column="0" Command="{Binding UploadPictureCommand}" Background="{ThemeResource ListViewItemPlaceholderBackgroundThemeBrush}" Width="640" Height="480" HorizontalAlignment="Left" Margin="0,-6,0,134" Grid.RowSpan="2" >
                 <StackPanel>
                     <Image Source="{Binding UploadedPicture}" Stretch="Uniform" Visibility="{Binding UploadedPicture, Converter={StaticResource ObjectToVisibilityConverter}}"/>
                     <TextBlock Text="Upload" Visibility="{Binding UploadedPicture, Converter={StaticResource ObjectToCollapsedConverter}}"/>
                 </StackPanel>
             </Button>
+            <Grid Grid.Row="0" Grid.Column="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="40"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="40"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="120"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Row="0" Grid.Column="0" Text="Title" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{ThemeResource ControlContentThemeFontSize}" Margin="5,5,5,5"/>
+                <TextBox Grid.Row="0" Grid.Column="1" HorizontalAlignment="Left" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" PlaceholderText="Title" FontFamily="{ThemeResource ContentControlThemeFontFamily}" Text="{Binding Title, Mode=TwoWay}" Margin="5,5,5,5"/>
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="Categories" HorizontalAlignment="Left" VerticalAlignment="Top" FontSize="{ThemeResource ControlContentThemeFontSize}"  Margin="5,5,5,5"/>
+                <ListView Grid.Row="1" Grid.Column="1" SelectionMode="Extended" HorizontalAlignment="Left" Width="200" ItemsSource="{Binding Categories}" Margin="5,5,5,5" />
+
+                <TextBlock Grid.Row="2" Grid.Column="0" Text="Tags" HorizontalAlignment="Left" VerticalAlignment="Center" FontSize="{ThemeResource ControlContentThemeFontSize}"  Margin="5,5,5,5"/>
+                <TextBox Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Width="400" PlaceholderText="Tags" Text="{Binding Tags, Mode=TwoWay}" Margin="5,5,5,5"/>
+               
+
+            </Grid>
+            <Button Grid.Row="3" Grid.Column="1" Content="Post" HorizontalAlignment="Left" Margin="55,0,0,32" VerticalAlignment="Bottom" Height="40" Width="80" Command="{Binding PostCommand}"/>
         </Grid>
         <ProgressRing Grid.Row="1" IsActive="{Binding LoadingData}" Height="100" Width="100" />
     </Grid>
