--- a/socialalert-portable/LoginPage.xaml
+++ b/socialalert-portable/LoginPage.xaml
@@ -1,24 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
+<local:ModelPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:Bravson.Socialalert.Portable"
              x:Class="Bravson.Socialalert.Portable.LoginPage">
   <Grid>
     <Image Source="login_bg.jpg" Aspect="Fill"/>
-    <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Spacing="20">
+    <StackLayout VerticalOptions="Start" HorizontalOptions="Center" Spacing="20" WidthRequest="250">
       <Image Source="logo_login.png" WidthRequest="140" HeightRequest="140" Margin="0, 50, 0, 10"/>
       <Frame BackgroundColor="White" HasShadow="True" Padding="5">
         <StackLayout Orientation="Horizontal">
           <Image Source="email_login_icon.png" Aspect="AspectFit" WidthRequest="32"/>
-          <Entry Placeholder="Email" Keyboard="Email" Text="{Binding Username}" TextColor="Black" PlaceholderColor="Gray"  WidthRequest="200"/>
+          <Entry x:Name="usernameEntry" Placeholder="Email" Keyboard="Email" Text="{Binding Username}" TextColor="Black" PlaceholderColor="Gray"/>
         </StackLayout>
       </Frame>
       <Frame BackgroundColor="White" HasShadow="True" Padding="5">
         <StackLayout Orientation="Horizontal">
           <Image Source="password_login_icon.png" Aspect="AspectFit" WidthRequest="32" />
-          <Entry Placeholder="Password" IsPassword="True" Text="{Binding Password}" TextColor="Black" PlaceholderColor="Gray"  WidthRequest="200"/>
+          <Entry x:Name="passwordEntry" Placeholder="Password" IsPassword="True" Text="{Binding Password}" TextColor="Black" PlaceholderColor="Gray"/>
         </StackLayout>
       </Frame>
-      <Button Text="Login" BackgroundColor="#202F80" TextColor="White" FontAttributes="Bold" Command="{Binding Login}"/>
+      <Grid>
+        <Button Text="Login" BackgroundColor="#202F80" TextColor="White" FontAttributes="Bold" Command="{Binding Login}"/>
+        <ActivityIndicator VerticalOptions="Center" HorizontalOptions="Center" IsRunning="{Binding LoadingData}" />
+      </Grid>
     </StackLayout>
   </Grid>
-</ContentPage>
+</local:ModelPage>
